<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginHomeActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            style="@style/AppTheme.TitleText"
            android:text="@string/esqueci_senha" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginStart="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.37" android:hint="@string/seu_email"/>
    <Button
            android:text="@string/continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entrarButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/AppTheme.ButtonPrimary"
            app:layout_constraintTop_toBottomOf="@+id/emailField"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:linksClickable="false"
            style="@style/AppTheme.PrimaryText"
            app:layout_constraintStart_toStartOf="@+id/emailField" android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/emailField"/>
    <TextView
            android:text="@string/ou_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cadastroText"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"
            style="@style/AppTheme.PrimaryText"
            app:layout_constraintEnd_toEndOf="@+id/entrarButton"
            app:layout_constraintStart_toStartOf="@+id/entrarButton"/>
    <TextView
            android:text="@string/email_redefinicao"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/emailField"
            app:layout_constraintStart_toStartOf="@+id/emailField" app:layout_constraintTop_toBottomOf="@+id/emailField"
            android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.0" android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
